# Squid

./: FIXES_REPORT.md  README.md
.jules/: bolt.md
audit/: AUDIT.md  FINDINGS.md  META_AUDIT.md  META_AUDIT_NEW.md  TEST_REPORT.md
contracts/agent-contract/contracts/hello-world/: Cargo.toml
contracts/agent-contract/contracts/hello-world/src/: lib.rs  test.rs
contracts/agent-contract/contracts/hello-world/test_snapshots/test/: test_constructor.1.json  test_constructor_basic.1.json  test_constructor_parameters.1.json  test_contract_initialization_idempotency.1.json  test_different_season_ids.1.json  test_get_status_after_init.1.json  test_initial_state_values.1.json  test_pulse_on_time_extends_deadline.1.json
contracts/game-registry/contracts/game-registry/: Cargo.toml
contracts/game-registry/contracts/game-registry/src/: lib.rs  test.rs
contracts/tests/: integration_tests.rs
docs/: GAME_FLOW.md  GDD-v1.3.md
relayer/: .env.example  .gitignore  Dockerfile  README.md  jest.config.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
relayer/src/: app.ts
relayer/src/middleware/: errorHandler.ts  rateLimit.ts  validation.ts
relayer/src/routes/: index.ts
relayer/src/services/: defender.ts  relayer.ts  stellar.ts
relayer/src/types/: index.ts
relayer/src/utils/: logger.ts
relayer/tests/: defender.test.ts  relayer.test.ts  routes.test.ts  stellar.test.ts
skill/: .gitignore  SKILL.md  agent.ts  config.yaml  index.test.ts  index.ts  package.json  stellar.ts  tsconfig.json  types.ts  verify_fix.ts  verify_vulnerability.ts
(+108 files in other folders)
