[package]
name = "agent-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
game-registry = { path = "../../../game-registry/contracts/game-registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
